// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "no.nav.ereg.proto";
option java_outer_classname = "EregOrgProto";
option objc_class_prefix = "EOP";

package no.nav.ereg.proto;

// this message will be the key part of kafka payload
message EregOrganisationEventKey {

  string org_number = 1;

  enum OrgType {
    ENHET = 0;
    UNDERENHET = 1;
  }
  OrgType org_type = 2;
}

// this message will be the value part of kafka payload
message EregOrganisationEventValue {

  string org_as_json = 1;
  int32 json_hash_code = 2;
}

